refactoring of QuafuAdapter and some of its tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,5 @@
 markers =
     ibm_token_required: tests that require IBM Cloud access
     ionq_apikey_required: tests that require IONQ Cloud access
+    quafu_apikey_required: tests that require Quafu Cloud access
 addopts = --strict-markers
